# ggen-mcp

./: .cursorrules  .env.example  .ggen_license.example  .gitignore  .gitmodules  ANDON_RESEARCH_SUMMARY.md  AUDIT_IMPLEMENTATION_SUMMARY.md  AUDIT_INTEGRATION_GUIDE.md  AUDIT_QUICK_REFERENCE.md  AUDIT_TRAIL.md  BATCH_OPERATIONS_DESIGN.md  CHANGELOG.md  CHANGES_SUMMARY.md  CHICAGO_TDD_TEST_HARNESS_COMPLETE.md  CLAUDE-DESKTOP.md  CLAUDE.md  CODEGEN_PIPELINE_HARNESS_COMPLETE.md  CODEGEN_PIPELINE_HARNESS_IMPLEMENTATION.md  CODEGEN_PIPELINE_HARNESS_NOTES.md  CODEGEN_VALIDATION_IMPLEMENTATION.md  CODE_COVERAGE_IMPLEMENTATION.md  CONCURRENCY_ENHANCEMENTS.md  CONCURRENCY_QUICK_REFERENCE.md  CONFIG_VALIDATION.md  CORRECTED_FILES_COMPLETE.md  Cargo.toml  DEFENSIVE_CODING_GUIDE.md  DELIVERY_SUMMARY.txt  DISTRIBUTED_TRACING_IMPLEMENTATION.md  DOMAIN_MODEL_HARNESS_SUMMARY.md  Dockerfile  Dockerfile.full  ENTITLEMENT_DELIVERABLES.md  ENTITLEMENT_QUICKSTART.md  FIRST_LIGHT_REPORT_IMPLEMENTATION.md  FORK_ENHANCEMENTS_SUMMARY.md  GGEN_SYNC_INSTRUCTIONS.md  HEALTH_CHECK_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  (+68 more)
.cargo/: config.toml
.claude/: DEPLOYMENT_SUMMARY.md  INDEX.md  README.md  SETUP.md  settings.json  state.json
alertmanager/: config.yml
benches/: dod_benchmarks.rs  mcp_performance_benchmarks.rs
blackbox/: config.yml
docs/: ASYNC_PATTERNS_ANALYSIS.md  ASYNC_PATTERNS_README.md  CLAUDE_CODE_WEB_PRACTICES.md  CLAUDE_RESEARCH_INDEX.md  CODEGEN_PIPELINE_QUICK_REFERENCE.md  CODE_COVERAGE.md  CODE_GENERATION_VALIDATION.md  CODE_GENERATION_WORKFLOWS.md  DEFINITION_OF_DONE.md  DEFINITION_OF_DONE_API.md  DEPLOYMENT_CHECKLIST.md  DISTRIBUTED_TRACING.md  DOD_PERFORMANCE_MONITORING.md  DOMAIN_MODEL_ARCHITECTURE.md  ENTITLEMENT_PROVIDER.md  ENTITLEMENT_SYSTEM.md  ERGONOMICS.md  ERROR_HANDLING_ANALYSIS.md  ERROR_HANDLING_IMPROVEMENTS.md  ERROR_HANDLING_README.md  EVIDENCE_BUNDLE_IMPLEMENTATION.md  FIRST_LIGHT_REPORT.md  FIXTURE_LIBRARY_SUMMARY.md  FORK_TRANSACTION_GUARDS.md  GGEN_CONFIG_TOOLS.md  GGEN_MCP_TOOLS_COVERAGE.md  GGEN_UNIFIED_README.md  GRACEFUL_SHUTDOWN.md  GUARD_KERNEL.md  HARNESS_IMPLEMENTATION_COMPLETE.md  HEALTH_CHECKS.md  INCIDENT_RESPONSE_RUNBOOK.md  INFERENCE_RULE_VALIDATION.md  INPUT_VALIDATION_GUIDE.md  INTEGRATION_CHECKLIST.md  JIRA_EXPORT_IMPLEMENTATION.md  JIRA_INTEGRATION.md  JIRA_STAGE_INTEGRATION.md  JIRA_SYNC.md  JIRA_UNIFIED_MIGRATION.md  (+99 more)
examples/: async_mcp_patterns.rs  codegen_pipeline_harness_example.rs  codegen_validation_examples.rs  concurrency_patterns.rs  config-invalid-cache.yaml  config-invalid-recalc.yaml  config-invalid-timeout.yaml  config-valid-full.yaml  dod_report_example.rs  dod_validation.rs  error_handling_patterns.rs  ggen-jira-integration.toml  mcp_testing_patterns.rs  memory_safety_patterns.rs  multi_format_validation_example.rs  newtype_integration.rs  ontology_generation_example.rs  ontology_validation.rs  production_setup.rs  recovery_integration.rs  resource_management_patterns.rs  sample_receipt.json  serialization_patterns.rs  server_integration_example.rs  template_validation_example.rs  toml_config_harness_demo.rs  type_driven_mcp.rs  validation_example.rs  verify_receipt_example.md
loki/: config.yml
meta/: ggen.toml
observability/: loki.yml  prometheus.yml  promtail.yml
ontology/: mcp-domain.ttl  shapes.ttl
profiles/: enterprise-strict.toml  ggen-mcp-default.toml
prometheus/: prometheus.yml
promtail/: config.yml
queries/: aggregates.rq  application_mod.rq  commands.rq  domain_entities.sparql  domain_mod.rq  handlers.rq  invariants.rq  mcp_guards.sparql  mcp_prompts.sparql  mcp_receipts.sparql  mcp_resources.sparql  mcp_server.sparql  mcp_tool_params.rq  mcp_tools.rq  mcp_tools.sparql  policies.rq  properties.rq  repositories.rq  services.rq  tests.rq  value_objects.rq
schemas/: receipt.json
scripts/: coverage.sh  ggen-sync.sh  load-test.sh  local-docker-mcp.sh  snapshot_manager.sh  start-monitoring.sh  stop-monitoring.sh  test_validators.sh  validate_sparql_limits.sh  verify_entitlement.sh  verify_manifest.sh
snapshots/: README.md
src/: config.rs  error.rs  fork.rs  fork_original.rs.bak  health.rs  lib.rs  logging.rs  main.rs  metrics.rs  model.rs  server.rs  shutdown.rs  state.rs  state_original.rs.bak  styles.rs  utils.rs  workbook.rs
templates/: aggregate.rs.tera  application_mod.rs.tera  command.rs.tera  domain_entity.rs.tera  domain_mod.rs.tera  domain_service.rs.tera  handlers.rs.tera  mcp_resource_handler.rs.tera  mcp_tool_handler.rs.tera  mcp_tool_params.rs.tera  mcp_tools.rs.tera  (+5 more)
(+456 files in other folders)
