[package]
name = "spreadsheet-read-mcp"
version = "0.2.0"
edition = "2024"
description = "An MCP server that lets LLM agents explore spreadsheet workbooks safely and deterministically"
authors = ["Frankie Colson"]
repository = "https://github.com/PSU3D0/spreadsheet-read-mcp"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
serde_yaml = "0.9"
rmcp = { version = "0.11.0", features = ["transport-io", "transport-streamable-http-server"] }
rmcp-macros = "0.11.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "net"] }
parking_lot = "0.12"
lru = "0.12"
ahash = "0.8"
smallvec = "1.13"
umya-spreadsheet = "2.3.3"
formualizer-parse = { version = "0.1.0" }
walkdir = "2.5"
globset = "0.4"
rand = "0.8"
sha2 = "0.10"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
indexmap = "2.2"
regex = "1.10"
strum = { version = "0.26", features = ["derive"] }
schemars = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
axum = { version = "0.8", default-features = false, features = ["macros", "tokio", "http1"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
assert_matches = "1.5"
serde_json = "1.0"
tempfile = "3.10"
