[package]
name = "spreadsheet-mcp"
version = "0.9.0"
edition = "2024"
description = "An MCP server that lets LLM agents explore and edit spreadsheet workbooks"
authors = ["Frankie Colson"]
repository = "https://github.com/PSU3D0/spreadsheet-mcp"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
serde_yaml = "0.9"
rmcp = { version = "0.11.0", features = ["transport-io", "transport-streamable-http-server"] }
rmcp-macros = "0.11.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "net", "process"] }
parking_lot = "0.12"
lru = "0.12"
ahash = "0.8"
smallvec = "1.13"
umya-spreadsheet = "2.3.3"
ovba = "0.7.1"
formualizer-parse = { version = "0.1.0" }
walkdir = "2.5"
globset = "0.4"
rand = "0.8"
sha2 = "0.10"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = "0.22"
opentelemetry-otlp = "0.15"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23"
opentelemetry-semantic-conventions = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
indexmap = "2.2"
regex = "1.10"
strum = { version = "0.26", features = ["derive"] }
schemars = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
axum = { version = "0.8", default-features = false, features = ["macros", "tokio", "http1", "json"] }
tokio-util = { version = "0.7", features = ["rt"] }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
base64 = { version = "0.22", optional = true }

# ggen-mcp: ontology and code generation
oxigraph = "0.4"
tera = "1"
syn = { version = "2.0", features = ["full", "parsing"] }
toml = "0.8"
toml_edit = "0.22"
# sha2 already declared above

async-trait = "0.1"
uuid = { version = "1.10", features = ["v4"] }
zip = "0.6"
quick-xml = { version = "0.31", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh64"], optional = true }
tempfile = "3.10"
prometheus-client = "0.22"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
recalc = ["quick-xml", "xxhash-rust", "image", "base64"]
docker-tests = []

[dev-dependencies]
assert_matches = "1.5"
serde_json = "1.0"
testcontainers = "0.23"
bollard = "0.18"
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3.2"
rmcp = { version = "0.11.0", features = ["client", "transport-child-process"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
test-strategy = "0.3"
tower = "0.5"
http-body-util = "0.1"
toml = "0.8"
num_cpus = "1.16"
similar = "2.6"
chicago-tdd-tools = { path = "chicago-tdd-tools", features = ["testing-extras"] }

[[bench]]
name = "mcp_performance_benchmarks"
harness = false
